tests/hulk/errors/semantic/inherit_undefined.hulk
type B(x: Number) inherits Nonexistent(x) {
    val: Number = x;
}

let b = new B(5) in print(b.val);
